@@ -1,6 +1,8 @@
 2006-01-03 Perry
  BUG: [ 1390849 ] cvs trunk MergeChineseSimplified doesn't compile
   Src/Languages: ChineseSimplified: MergeChineseSimplified.rc
+ PATCH: [ 1212161 ] Fix handling of \r\n in ByteComparator
+  Src: ByteComparator.cpp
 
 2006-01-02 Perry
  PATCH: [ 1383802 ] Cleanup line difference options in Editor-options
